track input data

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 *.egg-info
-data/input/*
-TODO.md
 *.DS_Store
-*.gpkg
-data/processed/*
-*.pyc
-network_analysis_exploration.qgz
-scripts/export_data_andreas.py
-scripts/sql/export_andreas.sql
 *.gpkg-journal
+*.pyc
+
 results/*
+data/input/archive/*
+data/processed/*
+TODO.md
+network_analysis_exploration.qgz
+
+data/edges_udtraek.gpkg
+data/nodes_udtraek.gpkg
