--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 
 results/*
 data/input/archive/*
-data/input/population/*
 data/processed/*
 TODO.md
 network_analysis_exploration.qgz
@@ -17,3 +16,9 @@ scripts/test.gpkg-shm
 scripts/test.gpkg-wal
 scripts/presentation_plots.py
 scripts/sql/test.sql
+data/input/population/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C19/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C19.tif
+data/input/population/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C19/GHS_POP_GLOBE_R2023A_input_metadata.xlsx
+data/input/population/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C19/GHSL_Data_Package_2023_light.pdf
+data/input/population/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C20/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C20.tif
+data/input/population/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C20/GHS_POP_GLOBE_R2023A_input_metadata.xlsx
+data/input/population/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C20/GHSL_Data_Package_2023_light.pdf
