--- a/config.yml
+++ b/config.yml
@@ -29,3 +29,9 @@ p_lisa: 0.05  # p-value for LISA
 
 # Distance for evaluation of network reach
 reach_dist: 5
+all_reach_distances:
+- 1
+- 2
+- 5
+- 10
+- 15
