--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ data/input/population/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C20/GHS_POP_E2
 data/input/population/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C20/GHS_POP_GLOBE_R2023A_input_metadata.xlsx
 data/input/population/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C20/GHSL_Data_Package_2023_light.pdf
 archive.py
+illustrations/overview_map.svg
