--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ archive.py
 illustrations/overview_map.png
 illustrations/population_map.png
 illustrations/urban_areas.png
+illustrations/hex_grid.png
