--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ illustrations/overview_map.png
 illustrations/population_map.png
 illustrations/urban_areas.png
 illustrations/hex_grid.png
+illustrations/density.png
+illustrations/reach.png
