--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ illustrations/urban_areas.png
 illustrations/hex_grid.png
 illustrations/density.png
 illustrations/reach.png
+illustrations/components.png
