--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ data/input/population/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C20/GHS_POP_GL
 data/input/population/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C20/GHSL_Data_Package_2023_light.pdf
 archive.py
 illustrations/*.png
+gap_threshold_analysis/*.png
