--- a/config.yml
+++ b/config.yml
@@ -12,7 +12,7 @@ network_nodes: 'osm_nodes_export'
 
 
 socio_fp: "../data/processed/voting_areas.gpkg"
-adm_boundaries_fp: "../data/input/adm_boundaries/muni_boundaries.gpkg"
+muni_boundaries_fp: "../data/input/municipalities/muni_boundaries.gpkg"
 urban_areas_fp: "../data/input/urban/urban_areas.parquet"
 pop_fp_1: "../data/input/population/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C19/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C19.tif"
 pop_fp_2: "../data/input/population/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C20/GHS_POP_E2020_GLOBE_R2023A_4326_3ss_V1_0_R4_C20.tif"
